# hesiod

./: CMakeLists.txt  cmake_readme.md  config.h.cmake
man/: CMakeLists.txt
src/: CMakeLists.txt
src/hesinfo/: CMakeLists.txt
src/lib/: CMakeLists.txt
